--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="ivent" class="section">
         <h2>イベント参加/受賞報告</h2>
         <!--ここブログにしたい-->
-        <p id="ivent-text">2023年7月 マスコン参加</p>     
+        <p id="ivent-text">2022年8月 第14回マスフェスタ参加</p>     
         <p id="ivent-text">2024年5月~7月 BitSummit GameJam参加</p>
         <p id="ivent-text">2024年12月 京産内アイデアコンテスト参加 🥈</p>
         <p id="ivent-text">2024年12月 OWASP関西×ランチタイムトーク参加</p>
