--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <section id="profile" class="section">
         <h2>プロフィール</h2>
         <p id="profile-text">徳永 智桜</p>
-        <p id="profile-text">京都産業大学 情報理工学部所属</p>
+        <p id="profile-text">2005年5月7日生まれ</p>
+        <p id="profile-text">京都府在住</p>
+        <p id="profile-text">所属大学: 京都産業大学・情報理工学部</p>
+        <p id="profile-text">所属団体(クリックすると公式Xに飛びます): <a href="https://x.com/g_keppeki">劇団ケッペキ</a>・<a href="https://x.com/c_a_c_official">電子計算応用部</a>・<a href="https://x.com/ISEMAKERS">MAKER'S CLUB</a>・<a href="https://x.com/ise_girls">ISE girl's</a></p>
         
     </section>
 
@@ -37,11 +40,11 @@
     <section id="ivent" class="section">
         <h2>イベント参加/受賞報告</h2>
         <!--ここブログにしたい-->
-        <p id="ivent-text">2022年8月 第14回マスフェスタ参加</p>     
-        <p id="ivent-text">2024年5月~7月 BitSummit GameJam参加</p>
-        <p id="ivent-text">2024年12月 京産内アイデアコンテスト参加 🥈</p>
-        <p id="ivent-text">2024年12月 OWASP関西×ランチタイムトーク参加</p>
         <p id="ivent-text">2024年10月~2025年1月 キャリアゲートウェイアイデアコンペティション参加</p>
+        <p id="ivent-text">2024年12月 OWASP関西×ランチタイムトーク参加</p>
+        <p id="ivent-text">2024年12月 京産内アイデアコンテスト参加 🥈</p>
+        <p id="ivent-text">2024年5月~7月 BitSummit GameJam参加</p>
+        <p id="ivent-text">2022年8月 第14回マスフェスタ参加</p>     
      </section>
      <div class="sns-box">
         <a href="https://x.com/jibathis2583" class="btn-sns btn-twitter">
