--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <section id="ivent" class="section">
         <h2>イベント参加/受賞報告</h2>
         <!--ここブログにしたい-->
+        <p id="ivent-text">2025年2月 神戸AIハッカソン参加 作品は<a href="https://github.com/renya-create/SmartDocx">こちら</a></p>
         <p id="ivent-text">2024年10月~2025年1月 キャリアゲートウェイアイデアコンペティション参加</p>
         <p id="ivent-text">2024年12月 OWASP関西×ランチタイムトーク参加</p>
         <p id="ivent-text">2024年12月 京産内アイデアコンテスト参加 🥈</p>
