--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p id="ivent-text">2025年2月 神戸AIハッカソン参加 作品は<a href="https://github.com/renya-create/SmartDocx">こちら</a></p>
         <p id="ivent-text">2024年10月~2025年1月 キャリアゲートウェイアイデアコンペティション参加</p>
         <p id="ivent-text">2024年12月 OWASP関西×ランチタイムトーク参加</p>
-        <p id="ivent-text">2024年12月 京産内アイデアコンテスト参加 🥈</p>
+        <p id="ivent-text">2024年12月 京産内アイデアコンテスト参加 優秀賞受賞</p>
         <p id="ivent-text">2024年5月~7月 BitSummit GameJam参加 作品は<a href="https://bitsummit-gamejam.itch.io/bsgj2024wild-card">こちら</a></p>
         <p id="ivent-text">2022年8月 第14回マスフェスタ参加</p>     
      </section>
