タイムライン編集

--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
         <p id="profile-text">2005年5月7日生まれ</p>
         <p id="profile-text">京都府在住</p>
         <p id="profile-text">所属大学: 京都産業大学・情報理工学部</p>
-        <p id="profile-text">所属団体:劇団ケッペキ</a>・<a href="https://x.com/c_a_c_official">電子計算応用部</a>・<a href="https://x.com/ISEMAKERS">MAKER'S CLUB</a>・<a href="https://x.com/ise_girls">ISE girl's</a></p>
-        <a class="twitter-timeline" href="https://twitter.com/g_keppeki?ref_src=twsrc%5Etfw">Tweets by g_keppeki</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script><a class="twitter-timeline" href="https://twitter.com/c_a_c_official?ref_src=twsrc%5Etfw">Tweets by c_a_c_official</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <p id="profile-text">所属団体:劇団ケッペキ・電子計算応用部・MAKER'S CLUB・ISE girl's
+    <div class="timeline-container">
+        <div class="timeline">
+        <a class="twitter-timeline" href="https://twitter.com/g_keppeki?ref_src=twsrc%5Etfw">Tweets by g_keppeki</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+        <div class="timeline">
+        <a class="twitter-timeline" href="https://twitter.com/c_a_c_official?ref_src=twsrc%5Etfw">Tweets by c_a_c_official</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+    </div>
     </section>
 
     
