タイムライン編集

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         <div class="timeline">
         <a class="twitter-timeline" href="https://twitter.com/c_a_c_official?ref_src=twsrc%5Etfw">Tweets by c_a_c_official</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
+        <div class="timeline">
+            <a class="twitter-timeline" href="https://twitter.com/ise_girls?ref_src=twsrc%5Etfw">Tweets by ise_girls</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+        <div class="timeline">
+            <a class="twitter-timeline" href="https://twitter.com/ISEMAKERS?ref_src=twsrc%5Etfw">Tweets by ISEMAKERS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
     </div>
     </section>
 
