--- a/index.html
+++ b/index.html
@@ -25,20 +25,21 @@
         <p id="profile-text">京都府在住</p>
         <p id="profile-text">所属大学: 京都産業大学・情報理工学部</p>
         <p id="profile-text">所属団体:劇団ケッペキ・電子計算応用部・MAKER'S CLUB・ISE girl's
-    <div class="timeline-container">
-        <div class="timeline">
-        <a class="twitter-timeline" href="https://twitter.com/g_keppeki?ref_src=twsrc%5Etfw">Tweets by g_keppeki</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-        <div class="timeline">
-        <a class="twitter-timeline" href="https://twitter.com/c_a_c_official?ref_src=twsrc%5Etfw">Tweets by c_a_c_official</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-        <div class="timeline">
-            <a class="twitter-timeline" href="https://twitter.com/ise_girls?ref_src=twsrc%5Etfw">Tweets by ise_girls</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-        <div class="timeline">
-            <a class="twitter-timeline" href="https://twitter.com/ISEMAKERS?ref_src=twsrc%5Etfw">Tweets by ISEMAKERS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-    </div>
+            <div class="timeline-container">
+                <div class="timeline">
+                    <a class="twitter-timeline" data-width="300" data-height="400" href="https://twitter.com/g_keppeki?ref_src=twsrc%5Etfw">Tweets by g_keppeki</a>
+                </div>
+                <div class="timeline">
+                    <a class="twitter-timeline" data-width="300" data-height="400" href="https://twitter.com/c_a_c_official?ref_src=twsrc%5Etfw">Tweets by c_a_c_official</a>
+                </div>
+                <div class="timeline">
+                    <a class="twitter-timeline" data-width="300" data-height="400" href="https://twitter.com/ise_girls?ref_src=twsrc%5Etfw">Tweets by ise_girls</a>
+                </div>
+                <div class="timeline">
+                    <a class="twitter-timeline" data-width="300" data-height="400" href="https://twitter.com/ISEMAKERS?ref_src=twsrc%5Etfw">Tweets by ISEMAKERS</a>
+                </div>
+            </div>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </section>
 
     
