--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Niko's site</title>
+    <title>T's portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -52,7 +52,7 @@
     </section>
 
     <section id="ivent" class="section">
-        <h2>イベント参加/受賞報告</h2>
+        <h2>イベント参加/受賞</h2>
         <!--ここブログにしたい-->
         <p id="ivent-text">2025年2月 神戸AIハッカソン参加 作品は<a href="https://github.com/renya-create/SmartDocx">こちら</a></p>
         <p id="ivent-text">2024年10月~2025年1月 キャリアゲートウェイアイデアコンペティション参加</p>
