--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul class="nav-links">
                 <li><a href="#profile">プロフィール</a></li>
                 <li><a href="#career">経歴</a></li>
-                <li><a href="#ivent">イベント参加報告</a></li>
+                <li><a href="#ivent">イベント参加など</a></li>
             </ul>
         </nav>
     </header>
