--- a/index.html
+++ b/index.html
@@ -60,6 +60,22 @@
     <body>
         <section id="ivent" class="section">
             <h2>イベント参加など</h2>
+
+            <div class="blog">
+                <div class="blog-title">2025年3月 関西ビギナーズハッカソンvol.5参加</div>
+                <div class="blog-content">
+                    <p>宿泊型ハッカソンに参加しました</p>
+
+                </div>
+            </div>
+
+            <div class="blog">
+                <div class="blog-title">2025年3月 Kobe IoT Tech Frontier参加</div>
+                <div class="blog-content">
+                    <p>神戸で行われたIoTのイベントに参加しました</p>
+                    <p>作品は<a href="https://github.com/renya-create/SmartDocx">こちら</a></p>
+                </div>
+            </div>
             
             <div class="blog">
                 <div class="blog-title">2025年2月 神戸AIハッカソン参加</div>
