ハイパーリンク埋め込み

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="blog-title">2025年3月 Kobe IoT Tech Frontier参加</div>
                 <div class="blog-content">
                     <p>神戸で行われたIoTのイベントに参加しました</p>
-                    <p>作品は<a href="https://github.com/renya-create/SmartDocx">こちら</a></p>
+                    <p>作品は<a hreh="https://github.com/Nikoyaka9dd/smile-photo-app">こちら</a></p>
                 </div>
             </div>
             
