--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="blog-title">2025年3月 関西ビギナーズハッカソンvol.5参加</div>
                 <div class="blog-content">
                     <p>宿泊型ハッカソンに参加しました</p>
-                    <p>作品は<a hreh="https://github.com/Nikoyaka9dd/smile-photo-app">こちら</a></p>
+                    <p>作品のリポジトリは<a hreh="https://github.com/Nikoyaka9dd/smile-photo-app">こちら</a></p>
 
                 </div>
             </div>
@@ -81,7 +81,7 @@
                 <div class="blog-title">2025年2月 神戸AIハッカソン参加</div>
                 <div class="blog-content">
                     <p>Microsoft AI Co-Innovation Labにて行われたハッカソンに参加しました。</p>
-                    <p>作品は<a href="https://github.com/renya-create/SmartDocx">こちら</a></p>
+                    <p>作品のリポジトリは<a href="https://github.com/renya-create/SmartDocx">こちら</a></p>
                 </div>
             </div>
             
